fix: box width, align h1

--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@ body {
 h1 {
     margin: 10px;
     text-shadow: 2px 2px 5px gray;
+    text-align: center;
 }
 
 .box {
@@ -28,7 +29,7 @@ h1 {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 50%;
+    width: 80%;
     height: 80vh;
     margin: 10px;
     border-radius: 10px;
